@@ -1,5 +1,5 @@
 /*
- * Copyright 2003,2005,2006,2008,2009,2010 Red Hat, Inc.
+ * Copyright 2003,2005,2006,2008,2009,2010,2011 Red Hat, Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -44,6 +44,7 @@ struct _pam_krb5_options {
 	int canonicalize;
 #endif
 	int chpw_prompt;
+	int cred_session;
 	int debug_sensitive;
 	int external;
 	int existing_ticket;
